# rb64

./: Cargo.toml  README
benches/: bench.rs
src/: bindings.rs  config.rs  decode.rs  encode.rs  lib.rs  main.rs  reader.rs  tui.rs
tests/: decode.rs  encode.rs  reader.rs  test.rs
