[package]
name = "rb64"
description = "Base 64"
version = "0.1.7"
edition = "2021"
authors = ["Saúl Valdelvira <saul@saulv.es>"]
license = "MIT"
readme = "README"

[dependencies]
dbg_unreachable = { version = ">=0.1.2" , git = "https://github.com/saulvaldelvira/dbg-unreachable" }
ratatui = { version = "0.28.1", optional = true }
tui-textarea = { version = ">=0.6.1", optional = true }

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:tui-textarea"]

